--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="gastos" id="gastos">
                 <h2 class="gastos_titulo">Gastos del mes</h2>
                 <div class="gastos__mensaje">
-                    <h3>*** Sin gastos registrados ***</h3>
+                    <h3>Sin gastos registrados</h3>
                 </div>
 
                 <div class="gastos__lista">
@@ -112,7 +112,18 @@
         <footer>
             <div class="agregar-gasto">
                 <button class="agregar-gasto__btn" id="toggle-form-gasto" data-accion="form-gasto">
-
+                    <svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="16"
+							height="16"
+							fill="currentColor"
+							class="agregar-gasto__btn-icono agregar-gasto__btn-icono--abrir"
+							viewBox="0 0 16 16"
+						>
+							<path
+								d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"
+							/>
+                    </svg>
                 </button>
             </div>
         </footer>
