--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="formulario-gastos" id="formulario-gastos">
+            <div class="formulario-gasto" id="formulario-gastos">
                 <h2 class="formulario-gasto__title">Agregar gasto</h2>
                 <form action="" class="formulario-gasto__form" id="formulario-gasto__form">
                     <div class="formulario-gasto__grupo">
@@ -152,7 +152,7 @@
                         <p class="formulario-gasto__leyenda">El precio debe contener solo numeros.</p>
                     </div>
 
-                    <button class="formulario-gasto__brn">Agregar gasto</button>
+                    <button class="formulario-gasto__btn">Agregar gasto</button>
                 </form>
             </div>
         </main>
@@ -173,6 +173,7 @@
 							/>
                     </svg>
                 </button>
+                <span class="agregar-gasto__agregar"> Añadir Nuevo Gasto</span>
             </div>
         </footer>
     </div>
